Fix spacing on small screens

--- a/project/src/components/app.css
+++ b/project/src/components/app.css
@@ -54,7 +54,7 @@ a {
 
 .button {
   background: svg-load("./close.svg", fill: #000) no-repeat center transparent;
-  background-size: 30%;
+  background-size: 50%;
   color: white;
   cursor: pointer;
   display: flex;
@@ -64,8 +64,13 @@ a {
   position: fixed;
   right: 0;
   top: 0;
-  width: 100px;
+  width: 60px;
   z-index: 400;
+  transition: transform 0.2s cubic-bezier(0.420, 0.000, 0.580, 1.000);
+}
+
+.button:hover {
+  transform: scale(1.1);
 }
 
 .body {
@@ -101,7 +106,8 @@ a {
 .summary {
   line-height: 1.5;
   max-width: 520px;
-  margin: 100px auto;
+  margin: 100px auto 0;
+  padding: 0 20px;
   text-align: center;
 }
 
@@ -120,4 +126,12 @@ a {
 .items {
   margin: 40px 0 0;
   text-align: center;
+}
+
+@media (min-width: 600px) {
+  .button {
+    background-size: 30%;
+    height: 60px;
+    width: 100px;
+  }
 }
