--- a/project/src/components/footer.css
+++ b/project/src/components/footer.css
@@ -1,13 +1,14 @@
 .footer {
   display: flex;
   font-size: 12px;
-  margin-left: -20px;
-  padding: 20vh 20px 20px 0;
+  padding: 100px 10px 20px;
   position: relative;
+  align-items: center;
+  justify-content: space-around;
 }
 
 .footerItem {
   background: white;
   display: inline-block;
-  padding-left: 40px;
+  padding: 10px;
 }
