--- a/project/src/components/hero.css
+++ b/project/src/components/hero.css
@@ -11,8 +11,8 @@
 
 .background {
   background: center transparent no-repeat;
-  background-size: contain;
-  height: 100vh;
+  background-size: cover;
+  height: 30vh;
   left: 0;
   top: 0;
   width: 100%;
@@ -21,6 +21,7 @@
 
 .body {
   margin: 40px auto 0;
+  padding: 0 10px;
   text-align: center;
 }
 
@@ -35,4 +36,16 @@ p {
 .subtitle {
   font-weight: 200;
   margin-top: 10px;
+}
+
+@media (min-width: 600px) {
+  .background {
+    background: center transparent no-repeat;
+    background-size: contain;
+    height: 100vh;
+    left: 0;
+    top: 0;
+    width: 100%;
+    z-index: 0;
+  }
 }
