--- a/project/src/components/item.css
+++ b/project/src/components/item.css
@@ -1,8 +1,7 @@
 .item {
   cursor: pointer;
   margin: 30px 0 0;
-  /*max-width: 280px;*/
-  /*opacity: 0.8;*/
+  padding: 0 20px;
   transition: all 0.19s cubic-bezier(0.420, 0.000, 0.580, 1.000);
 }
 
